--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/labenuexercicios/typescript-II-template#readme",
   "devDependencies": {
+    "@types/node": "^18.16.3",
     "typescript": "^4.9.4"
   }
 }
